name:                pack-counter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pack-counter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pack-counter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010 
  default-extensions:  OverloadedStrings
  ghc-options: -Wall -Wno-redundant-constraints
  build-depends:
      base >= 4.7 && < 5
    , text
    , lens
